@@ -172,6 +172,7 @@ Version 1.3-svn:
      to the bottom
    * scrolling performance improved
    * overall game performance improved when many units are visible
+   * better performance when mouse is over a unit that sees many enemy units
    * show full username at bottom of screen when moused over in MP Lobby
  * friends list
    * added a friend list in MP lobby, they will display a special icon in lobby,
